--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d dist",
+    "normalize:catalog": "node scripts/normalize-catalog.mjs"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
