--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prerender": "PRERENDER=true vite build",
     "preview": "vite preview",
     "deploy": "vite build && gh-pages -d dist",
     "normalize:catalog": "node scripts/normalize-catalog.mjs"
@@ -13,11 +14,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "tailwindcss": "^4.1.13",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "gh-pages": "^6.3.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-prerender": "^1.0.8"
   }
 }
